[package]
name = "brief-rs"
version = "0.1.0"
edition = "2021"
description = "Binary Robust Independent Elementary Features (BRIEF) is a local image binary descriptor that is used for tasks such as image matching and object recognition."
authors = ["Christian <chriamue@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chriamue/image-label-tool"
keywords = ["computer-vision", "brief", "local-feature-descriptor"]

[lib]
name = "brief"
path = "src/lib.rs"

[dependencies]
image = "0.24"
rand = "0.8"
